test(KnightTest): 나이트 이동 경로 반환 기능 테스트